Fix modal on iphones

--- a/css/gifts.css
+++ b/css/gifts.css
@@ -127,6 +127,9 @@ h1 {
   padding: 0;
   background-color: #ecf3f8;
   z-index: 1002;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 dialog::backdrop {
